<resources>
    <string name="app_name">All Notification Blocker</string>

    <string name="notifications">Notifications</string>
    <string name="applications">Applications</string>
    <string name="block_all_notifications">Block All Notifications</string>
    <string name="loading">Loading</string>
    <string name="channel_description">channel_description</string>
    <string name="ok">OK</string>

    <string name="notification_access_permission_is_required">Notification access permission is required. The settings window will open now so you can enable the required permission</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_remove_rule">Are you sure you want to remove this rule?</string>
    <string name="custom_rules">Custom Rules</string>
    <string name="contacts">Contacts</string>
    <string name="are_you_sure_call">Are you sure you want to call</string>
    <string name="clear_notifications">Clear Notifications</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_clear_notifications">Are you sure you want to clear notifications?</string>
    <string name="are_you_sure_exit">Are you sure you want to exit app? All stored notifications will be lost</string>
    <string name="scheduled_rules">Schedules Rules</string>
    <string name="no_contacts">No Contacts</string>
    <string name="no_apps">No Applications</string>
    <string name="search">Search</string>
    <string name="blocks_all_notifications_and_incoming_calls">Blocks all notifications and incoming calls</string>
    <string name="app_name1">App Name</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="review">Review</string>
    <string name="description_for_the_message">Description for the message</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="app_rules">App Rules</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_rules">Contact Rules</string>
    <string name="call">Call</string>
    <string name="timestamp">Timestamp</string>
    <string name="title">Title</string>
    <string name="subtext">Subtext</string>
    <string name="rule_type">Rule Type</string>
    <string name="rule_from">Rule From</string>
    <string name="status">Status</string>
    <string name="rule_to">Rule To</string>
    <string name="more">More</string>
    <string name="test">Test</string>
    <string name="app_logo">app logo</string>
    <string name="more_button">more button</string>
    <string name="todo">TODO</string>
    <string name="custom_block_rules">Custom Block Rules</string>
    <string name="always_block">Always Block</string>
    <string name="no_rules_applied">No rules applied</string>
    <string name="block_all">Block All</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="expired">Expired</string>
    <string name="notifications_and_calls">Notifications and Calls</string>
    <string name="phone">Phone</string>
    <string name="dialing">Dialing</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="android_system">Android System</string>
    <string name="system_ui">System UI</string>
    <string name="notifications_access">Notifications Access</string>
    <string name="no_blocked_notifications">No Blocked Notifications</string>
    <string name="text">Text</string>
    <string name="exceptions">Exceptions</string>
    <string name="save_profile">Save Profile</string>
    <string name="enter_profile_name">Enter profile name</string>
    <string name="title_activity_select_profile">Select Profile</string>

    <string name="are_you_sure_apply_profile">Are you sure you want to apply profile: %1$s?</string>
    <string name="enter_profile_description">Enter profile description</string>
    <string name="error_empty_profile_name">Error: empty profile name</string>
    <string name="are_you_sure_delete_profile">Are you sure you want to delete profile: %1$s?</string>
    <string name="profiles">Profiles</string>
    <string name="are_you_sure_overwrite_profile">Are you sure you want to overwrite profile: %1$s?</string>
    <string name="are_you_sure_disable_profile">Are you sure you want to disable the current rules?</string>
    <string name="reset_rules">Reset Rules</string>
    <string name="temporarily_disable_upgrade_prompt">Temporarily disable upgrade alert</string>
    <string name="enable_upgrade_prompt">Enable upgrade alert now</string>
    <string name="upgrade_prompt_disabled_toast">Upgrade alert disabled for 30 minutes</string>
    <string name="upgrade_prompt_enabled_toast">Upgrade alert re-enabled</string>


    <!--please replace the ids here-->
    <string name="ads_app_id">ca-app-pub-2635111446108281~5667609473</string>
    <string name="ad_view_unit_id">ca-app-pub-2635111446108281/5125559545</string>
    <string name="ad_fullscreen">ca-app-pub-2635111446108281/9327941704</string>
    <string name="ad_rewarded" translatable="false">ca-app-pub-2635111446108281/3218746197</string>
    <string name="ad_rewarded_debug" translatable="false">ca-app-pub-3940256099942544/5354046379</string>
<!--    <string name="ad_rewarded_debug" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="select">Select</string>
    <string name="new_message">New Message!</string>
    <string name="notification_image">notification image</string>
    <string name="expand_to_show">Expand to show! Expand to show! Expand to show!Expand to show!Expand to show!</string>
    <string name="select_end_date_time">Select end date/time</string>
    <string name="duration">Duration</string>
    <string name="coming_soon">Coming soon</string>
    <string name="all_notifications_blocked">All Notifications \nBlocked</string>
    <string name="status_call">status call</string>
    <string name="history">\nHistory</string>
    <string name="user_image">user image</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="_2_items">2 items</string>
    <string name="block_all_notifications_calls">Block All Notifications/Calls</string>
    <string name="unblock_all_notifications_calls">Unblock All Notifications/Calls</string>
    <string name="normalappnotification">"[normalAppNotification] "</string>
    <string name="open_in">"Open in "</string>
    <string name="no_profiles">No Profiles</string>
    <string name="no_notifications_blocked">No Notifications\nBlocked</string>
    <string name="some_notifications_blocked">Some Notifications\nBlocked</string>
    <string name="all_notifications_calls_blocked_schedule">All Notifications/Calls Blocked (Schedule)</string>
    <string name="all_notifications_blocked_schedule">All Notifications\nBlocked(Schedule)</string>
    <string name="all_calls_blocked_schedule">All Calls\nBlocked(Schedule)</string>
    <string name="all_notifications_calls_blocked">All Notifications/Calls Blocked</string>
    <string name="all_calls_blocked">All Calls\n Blocked</string>
    <string name="app_not_found">app not found</string>
    <string name="about">About</string>
    <string name="developer_name">Binaries Security</string>
    <string name="by">maintained by</string>
    <string name="contact_via_gmail">contact via gmail</string>
    <string name="github_profile">Github profile</string>
    <string name="linkedin_profile">Linkedin profile</string>
    <string name="fell_free_if_you_have_any_suggestions_or_found_any_bugs">fell free if you have any suggestions or found any bugs</string>
    <string name="repeat">repeat</string>
    <string name="statistics">statistics</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="select_start_date_time">Select start date/time</string>
    <string name="disabled">Disabled</string>
    <string name="schedule">schedule</string>
    <string name="select_date">select date</string>
    <string name="select_start_time">select start time</string>
    <string name="select_end_time">select end time</string>
    <string name="invalid_time_range">invalid time range</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="or">or</string>
    <string name="those_days">those days</string>
    <string name="everyday">everyday</string>
    <string name="those_week_days_forever">those week days forever</string>
    <string name="week_days_in_this_range">week days in this range</string>
    <string name="schedules">schedules</string>
    <string name="no_schedules_applied">no schedules applied</string>
    <string name="custom_schedule">custom schedule</string>
    <string name="permanent_schedule">permanent schedule</string>
    <string name="app_is_running">app is running</string>
    <string name="spans_midnight">Spans midnight</string>
    <string name="spans_midnight_suffix">(spans midnight)</string>

</resources>
