<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="20dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_clear_notifications"
        style="@style/context_menu_item"
        android:text="@string/clear_notifications" />

    <TextView
        android:id="@+id/text_view_profiles"

        style="@style/context_menu_item"
        android:text="@string/profiles" />

    <TextView
        android:id="@+id/text_view_reset_rules"


        style="@style/context_menu_item"
        android:text="@string/reset_rules" />

    <TextView
        android:id="@+id/text_view_privacy_policy"
        style="@style/context_menu_item"
        android:text="@string/privacy_policy" />

    <TextView
        android:id="@+id/text_view_exit"
        style="@style/context_menu_item"

        android:text="@string/exit" />

</LinearLayout>