<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        style="@style/dialog_title"

        android:text="@string/confirm" />

    <TextView
        android:id="@+id/text_view_title"
        style="@style/dialog_text"
        android:text="@string/review"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_no"
            style="@style/dialog_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_yes"
            style="@style/dialog_button"

            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>