<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">


    <TextView
        android:id="@+id/text_view_title"
        style="@style/dialog_title"

        android:text="@string/title" />


    <EditText
        android:id="@+id/text_input_layout_enter_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/segoeui"
        android:gravity="start"
        android:hint="@string/enter_profile_name"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />


    <EditText
        android:id="@+id/text_input_layout_enter_profile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/segoeui"
        android:gravity="start"
        android:hint="@string/enter_profile_description"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dialog_buttons_top_margin"

        android:orientation="horizontal">

        <Button
            android:id="@+id/button_yes"
            style="@style/dialog_button"
            android:layout_width="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>