<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card_view_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_clock"
            android:layout_width="@dimen/small_thumbnail_width"
            android:layout_height="@dimen/small_thumbnail_width"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/textview_ruletype"
            style="@style/card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight=".3"
            android:text="@string/schedule" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_ruleto"
                style="@style/card_subtitle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/rule_to"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textview_duration"
                style="@style/card_subtitle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="10sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/textview_status"
            style="@style/card_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/status"
            android:textColor="@color/blue"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/imagebutton_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_more"
            app:tint="@color/blue" />


    </LinearLayout>


</androidx.cardview.widget.CardView>