<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card_view_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/thumbnail_width"
                android:layout_height="@dimen/thumbnail_width"
                android:layout_gravity="top"
                android:contentDescription="@string/user_image"
                android:src="@drawable/profile"
                app:tint="@color/colorAccent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/item_txt_title"
                    style="@style/card_title"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/item_txt_message"
                    style="@style/card_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/text_view_edit_profile"
                style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/edit"
                android:textSize="10sp" />

            <Button
                android:id="@+id/text_view_apply_profile"
                style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/apply"
                android:textSize="10sp" />

            <Button
                android:id="@+id/text_view_delete_profile"
                style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/delete"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />


</androidx.cardview.widget.CardView>


