<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="4dp"
    android:paddingEnd="16dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_view_notification"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/notification_image"
            android:src="@drawable/ic_image" />

        <TextView
            android:id="@+id/text_view_collapsed_1"
            style="@style/TextAppearance.Compat.Notification.Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_view_notification"
            android:text="@string/new_message"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_title"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_notification"
        android:layout_marginTop="4dp"

        android:text="@string/new_message" />

    <TextView
        android:id="@+id/text_view_collapsed_2"
        style="@style/TextAppearance.Compat.Notification.Line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_notification"
        android:layout_alignParentStart="true"

        android:layout_marginTop="4dp"
        android:text="@string/expand_to_show"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_collapsed_2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_view_notification2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/text_view_collapsed_2"
            android:layout_toStartOf="@id/text_view_notification_action"
            android:contentDescription="@string/notification_image"
            android:src="@drawable/on" />

        <TextView
            android:id="@+id/text_view_notification_action"
            style="@style/TextAppearance.Compat.Notification.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_collapsed_2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/block_all"

            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <!--    <androidx.appcompat.widget.SwitchCompat-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:id="@+id/switch_notification" />-->

</LinearLayout>